constructed booking system with schedule and timeslots, keep testing it